# Phonepe-Pulse

./: README.md  pyproject.toml  requirementsALL.txt
data/csv/: States_Longitude_Latitude.csv
data/json/aggregated/transaction/country/india/2022/: 1.json
data/json/aggregated/user/country/india/2018/: 1.json
data/json/map/transaction/hover/country/india/2018/: 1.json
data/json/map/transaction/hover/country/india/2022/: 1.json
data/json/map/transaction/hover/country/india/state/andaman-&-nicobar-islands/2018/: 1.json
data/json/map/transaction/hover/country/india/state/andaman-&-nicobar-islands/2022/: 1.json
data/json/map/user/hover/country/india/2018/: 1.json
data/json/map/user/hover/country/india/state/andaman-&-nicobar-islands/2018/: 1.json
data/json/top/transaction/country/india/2018/: 1.json
data/json/top/transaction/country/india/state/andaman-&-nicobar-islands/2018/: 1.json
data/json/top/user/country/india/2018/: 1.json
data/json/top/user/country/india/state/andaman-&-nicobar-islands/2018/: 1.json
src/: AggregatedTransactionData.py  AggregatedUserTransactionData.py  DataInsertion.py  MapHoverTransactionData.py  MapHoverUserTransactionData.py  PhonepePulse.py  TopRegisteredUserData.py  TopTransactionData.py  dbConfig.py
